force-app/main/default/objects/Conf_Category__c/Conf_Category__c.object-meta.xml
<CustomObject>
    <label>Configuration Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Categories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>