force-app/main/default/objects/Conf_Category__c/fields/Available_Column_Names__c.field-meta.xml
<CustomField>
    <fullName>Available_Column_Names__c</fullName>
    <label>Available Column Names</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>