force-app/main/default/objects/Conf_Category__c/fields/Column_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Column_Name_3__c</fullName>
    <label>Column Name 3</label>
    <length>254</length>
    <type>Text</type>
</CustomField>