force-app/main/default/objects/Conf_Category__c/fields/Function_Name__c.field-meta.xml
<CustomField>
    <fullName>Function_Name__c</fullName>
    <label>Function Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>