force-app/main/default/objects/Conf_Category__c/fields/Internal_Account__c.field-meta.xml
<CustomField>
    <fullName>Internal_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Configuration Categories</relationshipLabel>
    <relationshipName>Configuration_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>