force-app/main/default/objects/Conf_Category__c/fields/is_Max_1__c.field-meta.xml
<CustomField>
    <fullName>is_Max_1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Max 1</label>
    <type>Checkbox</type>
</CustomField>