force-app/main/default/objects/Conf_Category__c/fields/Progress_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Progress_Tracker__c</fullName>
    <label>Progress Tracker</label>
    <length>254</length>
    <type>Text</type>
</CustomField>