force-app/main/default/objects/Conf_Category__c/fields/Rule_Config__c.field-meta.xml
<CustomField>
    <fullName>Rule_Config__c</fullName>
    <label>Rule Config</label>
    <length>255</length>
    <type>Text</type>
</CustomField>