force-app/main/default/objects/Conf_Category__c/fields/Target_Limit__c.field-meta.xml
<CustomField>
    <fullName>Target_Limit__c</fullName>
    <label>Target Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>