force-app/main/default/objects/Conf_Category__c/fields/Target_Max_Value__c.field-meta.xml
<CustomField>
    <fullName>Target_Max_Value__c</fullName>
    <label>Target Max Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>