force-app/main/default/objects/Conf_Category__c/fields/Total_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Total_Metrics__c</fullName>
    <label>Total Metrics</label>
    <summaryForeignKey>Configuration_Category_Detail__c.Configuration_Category__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>